added dino head to sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,9 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <p>{{ site.description }}</p>
+    <div class="image-responsive">
+        <img src="{{ site.baseurl }}public/img/dino-head.png" />
+    </div>
   </div>
 
   <nav class="sidebar-nav">
