resized images and added dinosaur_konami.js

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
     <div class="image-responsive">
-        <img src="{{ site.baseurl }}public/img/dino-head.png" />
+        <a href="/"><img src="{{ site.baseurl }}public/img/dino-head.png" /></a>
     </div>
   </div>
 
