--- a/_includes/sn_page_bottom.html
+++ b/_includes/sn_page_bottom.html
@@ -1,3 +1,4 @@
-    <script async src="{{ site.baseurl }}public/js/build/production.min.js"></script> 
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="{{ site.baseurl }}public/js/build/production.min.js"></script> 
   </body>
 </html>
