changed font to open sans

--- a/public/css/layout/_framework.scss
+++ b/public/css/layout/_framework.scss
@@ -11,7 +11,7 @@ html, body {
 }
 
 html {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
 }
@@ -383,7 +383,7 @@ tbody tr:nth-child(odd) {
   /* clearfix */
   margin-left: -1rem;
   margin-right: -1rem;
-  font-family: "PT Sans", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
   color: #ccc;
   text-align: center;
 }
@@ -733,7 +733,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 14rem;
   visibility: hidden;
   overflow-y: auto;
-  font-family: "Nunito", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
   font-size: .875rem;
   /* 15px */
   color: rgba(255, 255, 255, 0.6);
@@ -967,7 +967,7 @@ a.sidebar-nav-item {
   /* clearfix */
   margin-left: -1rem;
   margin-right: -1rem;
-  font-family: "Nunito", Helvetica, Arial, sans-serif;
+  font-family: "Open Sans", Helvetica, Arial, sans-serif;
   color: #ccc;
   text-align: center;
 }
