--- a/public/css/_typography.scss
+++ b/public/css/_typography.scss
@@ -1,2 +1,2 @@
 /* Import Google Fonts */
-@import url("http://fonts.googleapis.com/css?family=Open+Sans|Dosis:400,800");
+@import url("http://fonts.googleapis.com/css?family=Open+Sans");
