--- a/_includes/sn_page_top.html
+++ b/_includes/sn_page_top.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-
 <head>
+  <meta charset="utf-8" />        
   <link href="http://gmpg.org/xfn/11" rel="profile">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
   <meta name="author" content="Mark Innes">
+  <meta name="robots" content="index,follow,archive" />
+  <meta name="HandheldFriendly" content="True" />
+  <meta name="MobileOptimized" content="320" />
+  <meta name="google-site-verification" content="" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
+  <meta http-equiv="cleartype" content="on" />  <!-- meta_tags -->   
+
+  <!-- social_tags -->
+  <meta property="og:title" content="Mark Innes"/>
+  <meta property="og:type" content="website"/>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@innesm4" />
+  <meta name="twitter:creator" content="@innesm4" />
 
   <title>
     {% if page.title == "Home" %}
