--- a/_includes/sn_page_top.html
+++ b/_includes/sn_page_top.html
@@ -11,7 +11,7 @@
   <meta name="robots" content="index,follow,archive" />
   <meta name="HandheldFriendly" content="True" />
   <meta name="MobileOptimized" content="320" />
-  <meta name="google-site-verification" content="" />
+  <meta name="google-site-verification" content="fznUJ7eEmeDz7rsOdaOM28SP8MKokREMzUhQQ1Oeo1o" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE" />
   <meta http-equiv="cleartype" content="on" />  <!-- meta_tags -->   
