added blog back

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,9 +5,7 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   <div class="sidebar-item">
-    <div class="image-responsive">
-        <a href="/"><img src="{{ site.baseurl }}public/img/dino-head.png" /></a>
-    </div>
+    <p>{{ site.description }}</p>
   </div>
 
   <nav class="sidebar-nav">
