--- a/public/css/_variables.scss
+++ b/public/css/_variables.scss
@@ -6,7 +6,7 @@ $white: #fff;
 ///////////// Color Palette ////////////////
 
 $color-p: #ce0037; 
-$color-s: #7c878e; 
+$color-s: #75b5aa; 
 
 ///////////// Font ////////////////
 
