--- a/_includes/sn_page_top.html
+++ b/_includes/sn_page_top.html
@@ -30,6 +30,13 @@
       {{ page.title }} &middot; {{ site.title }}
     {% endif %}
   </title>
+    {% if page.title == "Home" %}
+      <meta name="description" content="{{ site.description }}">
+    {% else %}
+      <meta name="description" content="{{ page.description }}">
+    {% endif %}
+
+
 
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}public/css/global.css">
